[package]
name = "telegram-bot"
version = "0.6.1"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>", "Fedor Gogolev <knsd@knsd.net>"]

description = "A library for creating Telegram bots"

documentation = "https://docs.rs/telegram-bot/"
repository = "https://github.com/telegram-rs/telegram-bot"
readme = "../README.md"

keywords = ["telegram", "bot", "chat", "api"]
categories = ["api-bindings", "asynchronous"]
license = "MIT"

[dependencies]
failure = "0.1.3"
parking_lot = "0.6.4"
serde = "1.0"
tokio-core = "0.1"
futures = "0.1"
serde_json = "1.0"

telegram-bot-raw = { version = "=0.6.1", path = "../raw" }

curl = {version = "0.4.6", optional = true}
tokio-curl = {version = "0.1.9", optional = true}

hyper = {version = "0.12", optional = true}
hyper-tls = {version = "0.3", optional = true}

[features]
#default = ["curl_connector"]
default = ["hyper_connector"]

curl_connector = ["curl", "tokio-curl"]
hyper_connector = ["hyper", "hyper-tls"]

